--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <meta property="og:title" content="Aprende CSS desde cero">
     <meta property="og:description"
         content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google.">
-    <meta property="og:image" content="https://alexcgdesign.github.io/images/css.jpg">
+    <meta property="og:image" content="https://EduardoRP5.github.io/images/css.jpg">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.jordanalex.com/">
     <meta property="twitter:title" content="Aprende CSS desde cero">
     <meta property="twitter:description"
         content="Hola, soy una descripción que verás cuando busques algo de mi temática en Google.">
-    <meta property="twitter:image" content="https://alexcgdesign.github.io/images/css.jpg">
+    <meta property="twitter:image" content="https://EduardoRP5.github.io/images/css.jpg">
 </head>
 
 <body>
@@ -325,7 +325,7 @@
                 <a href="#" class="footer__icons"><img src="./images/youtube.svg" class="footer__img"></a>
             </div>
 
-            <h3 class="footer__copyright">Derechos reservados &copy; Jordan Alexander</h3>
+            
         </section>
     </footer>
 
