Se agrego la seccion de servicios y la seccion sobre nosotros

--- a/index.html
+++ b/index.html
@@ -77,23 +77,20 @@
             <div class="about__main">
                 <article class="about__icons">
                     <img src="./images/shapes.svg" class="about__icon">
-                    <h3 class="about__title">CSS Layouts</h3>
-                    <p class="about__paragrah">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae tempore
-                        porro eius facilis?</p>
+                    <h3 class="about__title">Consultoría en Ciberseguridad.</h3>
+                    <p class="about__paragrah">Te ayudamos a identificar, evaluar y gestionar los riesgos asociados a las amenazas cibernéticas.</p>
                 </article>
 
                 <article class="about__icons">
                     <img src="./images/paint.svg" class="about__icon">
-                    <h3 class="about__title">Animaciones</h3>
-                    <p class="about__paragrah">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae tempore
-                        porro eius facilis?</p>
+                    <h3 class="about__title">Auditorías y pruebas de penetración.</h3>
+                    <p class="about__paragrah">Revisamos y analizamos el cumplimiento de políticas y controles de seguridad en tu organización.</p>
                 </article>
 
                 <article class="about__icons">
                     <img src="./images/code.svg" class="about__icon">
-                    <h3 class="about__title">Sass</h3>
-                    <p class="about__paragrah">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae tempore
-                        porro eius facilis?</p>
+                    <h3 class="about__title">Seguridad en la nube.</h3>
+                    <p class="about__paragrah">Protegemos tus datos, aplicaciones y servicios alojados en plataformas de nube.</p>
                 </article>
             </div>
         </section>
@@ -101,15 +98,17 @@
         <section class="knowledge">
             <div class="knowledge__container container">
                 <div class="knowledege__texts">
-                    <h2 class="subtitle">Curso completo de CSS3. ¡Domina CSS de una vez por todas!</h2>
-                    <p class="knowledge__paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi,
-                        aliquam nemo in facere suscipit at delectus unde labore ad officia iste accusantium eaque
-                        aperiam laborum est voluptate totam? Modi, obcaecati?</p>
-                    <a href="#" class="cta">Entra al curso</a>
+                    <h2 class="subtitle">Sobre nosotros.</h2>
+                    <p class="knowledge__paragraph">En Securitec, nos especializamos en ofrecer soluciones avanzadas de ciberseguridad para proteger
+                         los activos digitales de tu empresa. Con un equipo de expertos altamente capacitados y tecnología de vanguardia, ayudamos a
+                          prevenir, detectar y mitigar amenazas cibernéticas que pueden comprometer la seguridad de tu información. Nuestro enfoque 
+                          integral abarca desde auditorías de seguridad y pruebas de penetración hasta la implementación de medidas de protección en la nube. 
+                          Nos comprometemos a brindar servicios personalizados que garanticen la protección continua y la tranquilidad de nuestros clientes en 
+                          un mundo digital en constante cambio.</a>
                 </div>
 
                 <figure class="knowledge__picture">
-                    <img src="./images/macbook.png" class="knowledge__img">
+                    <img src="./images/favicon_sec.png" class="knowledge__img">
                 </figure>
             </div>
         </section>
