Se añadio la seccion de los especialistas y la seccion de preguntas frecuentes.

--- a/index.html
+++ b/index.html
@@ -114,17 +114,17 @@
         </section>
 
         <section class="price container">
-            <h2 class="subtitle">Obten el plan perfecto para aprender</h2>
+            <h2 class="subtitle">Obten el precio de nuestros servicios según lo que buscas.</h2>
 
             <div class="price__table">
                 <div class="price__element">
-                    <p class="price__name">Flexbox</p>
-                    <h3 class="price__price">Free</h3>
+                    <p class="price__name">Consultoría en Ciberseguridad.</p>
+                    <h3 class="price__price">$20/mes</h3>
 
                     <div class="price__items">
-                        <p class="price__features">Flexbox</p>
-                        <p class="price__features">Layouts</p>
-                        <p class="price__features">Responsive</p>
+                        <p class="price__features">Evaluación de Riesgos.</p>
+                        <p class="price__features">Analisis de amenazas.</p>
+                        <p class="price__features">Plan de seguridad.</p>
                     </div>
 
                     <a href="#" class="price__cta">Empieza ahora</a>
@@ -132,13 +132,13 @@
 
 
                 <div class="price__element price__element--best">
-                    <p class="price__name">Grid</p>
+                    <p class="price__name">Auditorías y pruebas de penetración.</p>
                     <h3 class="price__price">$30/mes</h3>
 
                     <div class="price__items">
-                        <p class="price__features">Grid</p>
-                        <p class="price__features">Implicit Grid</p>
-                        <p class="price__features">Responsive</p>
+                        <p class="price__features">Pentesting.</p>
+                        <p class="price__features">Auditoria de seguridad.</p>
+                        <p class="price__features">Revisión de Código Fuente.</p>
                     </div>
 
                     <a href="#" class="price__cta">Empieza ahora</a>
@@ -146,13 +146,13 @@
 
 
                 <div class="price__element">
-                    <p class="price__name">Animaciones</p>
+                    <p class="price__name">Seguridad en la nube.</p>
                     <h3 class="price__price">$40/mes</h3>
 
                     <div class="price__items">
-                        <p class="price__features">Animation</p>
-                        <p class="price__features">Transition</p>
-                        <p class="price__features">Render Website</p>
+                        <p class="price__features">Evaluación y Gestión de Seguridad en la Nube.</p>
+                        <p class="price__features">Control de Acceso en la Nube.</p>
+                        <p class="price__features">Protección de Datos.</p>
                     </div>
 
                     <a href="#" class="price__cta">Empieza ahora</a>
@@ -168,11 +168,10 @@
 
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Jordan Alexander, <span class="testimony__course">estudiante
-                                de CSS.</span></h2>
-                        <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
-                            esse, asperiores eaque totam nulla repudiandae quasi, deserunt culpa exercitationem
-                            blanditiis laborum veniam laboriosam saepe reiciendis dolorem. Cum, ratione voluptatum!</p>
+                        <h2 class="subtitle">Mi nombre es Jordan Alexander, <span class="testimony__course">Especialista en seguridad en la nube.</span></h2>
+                        <p class="testimony__review"> Especialista en seguridad en la nube con más de 5 años de experiencia en proteger entornos cloud. 
+                            Experto en arquitecturas seguras, compliance, y gestión de riesgos en plataformas como AWS y Azure, Juan ha ayudado a numerosas 
+                            empresas a implementar estrategias seguras que garantizan la protección de sus datos y operaciones en la nube.</p>
                     </div>
 
                     <figure class="testimony__picture">
@@ -182,11 +181,10 @@
 
                 <section class="testimony__body" data-id="2">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Alejandra Perez, <span class="testimony__course">estudiante de
-                                CSS.</span></h2>
-                        <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
-                            esse, asperiores eaque laborum veniam laboriosam saepe reiciendis dolorem. Cum, ratione
-                            voluptatum!</p>
+                        <h2 class="subtitle">Mi nombre es Alejandra Perez, <span class="testimony__course">Especialista en Auditorías y pruebas de penetración.</span></h2>
+                        <p class="testimony__review">Experta en identificar vulnerabilidades y evaluar la seguridad de sistemas mediante ataques simulados, ha 
+                            trabajado con diversas empresas para fortalecer sus defensas y garantizar el cumplimiento de estándares de ciberseguridad. Su enfoque 
+                            detallado asegura la detección temprana de amenazas.</p>
                     </div>
 
                     <figure class="testimony__picture">
@@ -196,10 +194,10 @@
 
                 <section class="testimony__body" data-id="3">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Karen Arteaga, <span class="testimony__course">estudiante de
-                                CSS.</span></h2>
-                        <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
-                            esse, niam laboriosam saepe reiciendis dolorem. Cum, ratione voluptatum!</p>
+                        <h2 class="subtitle">Mi nombre es Karen Arteaga, <span class="testimony__course">Especialista en Consultoría en Ciberseguridad.</span></h2>
+                        <p class="testimony__review">Se dedica a diseñar estrategias de protección personalizadas, ayudando a las empresas a gestionar riesgos, 
+                            cumplir con normativas y fortalecer su infraestructura digital. Su enfoque proactivo y asesoramiento experto garantizan una seguridad 
+                            integral frente a las crecientes amenazas cibernéticas.</p>
                     </div>
 
                     <figure class="testimony__picture">
@@ -209,10 +207,10 @@
 
                 <section class="testimony__body" data-id="4">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Kevin Ramirez, <span class="testimony__course">estudiante de
-                                CSS.</span></h2>
-                        <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
-                            esse, niam laboriosam saepe reiciendis dolorem. Cum, ratione voluptatum!</p>
+                        <h2 class="subtitle">Mi nombre es Kevin Ramirez, <span class="testimony__course">Especialista en Capacitación en Ciberseguridad.</span></h2>
+                        <p class="testimony__review">Se enfoca en desarrollar programas de formación personalizados para empresas, capacitando a equipos sobre buenas 
+                            prácticas de seguridad, prevención de amenazas y cumplimiento de normativas. Su enfoque práctico y dinámico asegura que los colaboradores 
+                            adquieran habilidades esenciales para proteger su entorno digital.</p>
                     </div>
 
                     <figure class="testimony__picture">
@@ -227,58 +225,54 @@
 
         <section class="questions container">
             <h2 class="subtitle">Preguntas frecuentes</h2>
-            <p class="questions__paragraph">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, porro
-                doloribus neque perspiciatis sapiente fuga.</p>
+            <p class="questions__paragraph">¿Tienes alguna duda sobre nuestros servicios? a continuación te respondemos las más comunes.</p>
 
             <section class="questions__container">
                 <article class="questions__padding">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué es CSS?
+                        <h3 class="questions__title">¿Por qué es importante la ciberseguridad en tu empresa?
                             <span class="questions__arrow">
                                 <img src="./images/arrow.svg" class="questions__img">
                             </span>
                         </h3>
 
-                        <p class="questions__show">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
-                            facere, quidem eum id excepturi assumenda explicabo nam accusamus veritatis voluptates
-                            eveniet adipisci, dicta nihil nemo modi possimus officiis quam atque? Lorem ipsum, dolor sit
-                            amet consectetur adipisicing elit. Quos facere, quidem eum id excepturi assumenda explicabo
-                            nam accusamus veritatis voluptates eveniet adipisci, dicta nihil nemo modi possimus officiis
-                            quam atque?</p>
+                        <p class="questions__show">La ciberseguridad es crucial porque protege la información y los sistemas tecnológicos de amenazas y 
+                            ataques que pueden comprometer la confidencialidad, integridad y disponibilidad de los datos. En un entorno cada vez más digitalizado, 
+                            la ciberseguridad previene el acceso no autorizado, el robo de información sensible, el daño a infraestructuras críticas y la interrupción 
+                            de servicios. Además, asegura que se respete la privacidad de los clientes y la fiabilidad de las empresas, cumpliendo con regulaciones y 
+                            protegiendo la reputación corporativa. Sin medidas adecuadas de ciberseguridad, tanto individuos como empresas están en riesgo de sufrir 
+                            pérdidas financieras, daños a la imagen y otros impactos graves.</p>
                     </div>
                 </article>
 
                 <article class="questions__padding">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué aprenderé en este curso?
+                        <h3 class="questions__title">¿Qué aprenderas en nuestras capacitaciones?
                             <span class="questions__arrow">
                                 <img src="./images/arrow.svg" class="questions__img">
                             </span>
                         </h3>
 
-                        <p class="questions__show">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
-                            facere, quidem eum id excepturi assumenda explicabo nam accusamus veritatis voluptates
-                            eveniet adipisci, dicta nihil nemo modi possimus officiis quam atque? Lorem ipsum, dolor sit
-                            amet consectetur adipisicing elit. Quos facere, quidem eum id excepturi assumenda explicabo
-                            nam accusamus veritatis voluptates eveniet adipisci, dicta nihil nemo modi possimus officiis
-                            quam atque?</p>
+                        <p class="questions__show">En nuestra capacitación en ciberseguridad, 
+                            se exploran diversos aspectos fundamentales para proteger la infraestructura 
+                            tecnológica de una organización. Los participantes aprenden a identificar y 
+                            analizar amenazas y vulnerabilidades, aplicar prácticas de seguridad para prevenir 
+                            ataques, gestionar riesgos a través de políticas y procedimientos adecuados, y responder 
+                            de manera efectiva a incidentes de seguridad para mitigar daños. Además, se abordan temas 
+                            como la criptografía, la seguridad en redes y sistemas, el cumplimiento de normativas y la 
+                            concienciación sobre el comportamiento seguro en el uso de tecnologías digitales.</p>
                     </div>
                 </article>
 
                 <article class="questions__padding">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué es CSS GRID?
+                        <h3 class="questions__title">En donde nos ubicamos?
                             <span class="questions__arrow">
                                 <img src="./images/arrow.svg" class="questions__img">
                             </span>
                         </h3>
 
-                        <p class="questions__show">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quos
-                            facere, quidem eum id excepturi assumenda explicabo nam accusamus veritatis voluptates
-                            eveniet adipisci, dicta nihil nemo modi possimus officiis quam atque? Lorem ipsum, dolor sit
-                            amet consectetur adipisicing elit. Quos facere, quidem eum id excepturi assumenda explicabo
-                            nam accusamus veritatis voluptates eveniet adipisci, dicta nihil nemo modi possimus officiis
-                            quam atque?</p>
+                        <p class="questions__show">Nos ubicamos en el Laboratorio de Ingenieria de Software en el Instituto Tecnologico Nacional de México con sede en Celaya, GTO. </p>
                     </div>
                 </article>
             </section>
@@ -289,7 +283,7 @@
     <footer class="footer">
         <section class="footer__container container">
             <nav class="nav nav--footer">
-                <h2 class="footer__title">Curso CSS.</h2>
+                <h2 class="footer__title">Securitec.</h2>
 
                 <ul class="nav__link nav__link--footer">
                     <li class="nav__items">
