--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Securitec</title>
-    <link rel="shortcut icon" href="./images/favicon_sec.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="shortcut icon" href="images/favicon_sec.png" type="image/x-icon">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/estilos.css">
 
     <meta name="theme-color" content="#2091F9">
 
@@ -54,11 +54,11 @@
                     <a href="#" class="nav__links">Blog</a>
                 </li>
 
-                <img src="./images/close.svg" class="nav__close">
+                <img src="images/close.svg" class="nav__close">
             </ul>
 
             <div class="nav__menu">
-                <img src="./images/menu.svg" class="nav__img">
+                <img src="images/menu.svg" class="nav__img">
             </div>
         </nav>
 
@@ -76,19 +76,19 @@
 
             <div class="about__main">
                 <article class="about__icons">
-                    <img src="./images/shapes.svg" class="about__icon">
+                    <img src="images/shapes.svg" class="about__icon">
                     <h3 class="about__title">Consultoría en Ciberseguridad.</h3>
                     <p class="about__paragrah">Te ayudamos a identificar, evaluar y gestionar los riesgos asociados a las amenazas cibernéticas.</p>
                 </article>
 
                 <article class="about__icons">
-                    <img src="./images/paint.svg" class="about__icon">
+                    <img src="images/paint.svg" class="about__icon">
                     <h3 class="about__title">Auditorías y pruebas de penetración.</h3>
                     <p class="about__paragrah">Revisamos y analizamos el cumplimiento de políticas y controles de seguridad en tu organización.</p>
                 </article>
 
                 <article class="about__icons">
-                    <img src="./images/code.svg" class="about__icon">
+                    <img src="images/code.svg" class="about__icon">
                     <h3 class="about__title">Seguridad en la nube.</h3>
                     <p class="about__paragrah">Protegemos tus datos, aplicaciones y servicios alojados en plataformas de nube.</p>
                 </article>
@@ -108,7 +108,7 @@
                 </div>
 
                 <figure class="knowledge__picture">
-                    <img src="./images/favicon_sec.png" class="knowledge__img">
+                    <img src="images/favicon_sec.png" class="knowledge__img">
                 </figure>
             </div>
         </section>
@@ -164,7 +164,7 @@
 
         <section class="testimony">
             <div class="testimony__container container">
-                <img src="./images/leftarrow.svg" class="testimony__arrow" id="before">
+                <img src="images/leftarrow.svg" class="testimony__arrow" id="before">
 
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__texts">
@@ -175,7 +175,7 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/face.jpg" class="testimony__img">
+                        <img src="images/face.jpg" class="testimony__img">
                     </figure>
                 </section>
 
@@ -188,7 +188,7 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/face2.jpg" class="testimony__img">
+                        <img src="images/face2.jpg" class="testimony__img">
                     </figure>
                 </section>
 
@@ -201,7 +201,7 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/face3.jpg" class="testimony__img">
+                        <img src="images/face3.jpg" class="testimony__img">
                     </figure>
                 </section>
 
@@ -214,12 +214,12 @@
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="./images/face4.jpg" class="testimony__img">
+                        <img src="images/face4.jpg" class="testimony__img">
                     </figure>
                 </section>
 
 
-                <img src="./images/rightarrow.svg" class="testimony__arrow" id="next">
+                <img src="images/rightarrow.svg" class="testimony__arrow" id="next">
             </div>
         </section>
 
@@ -232,7 +232,7 @@
                     <div class="questions__answer">
                         <h3 class="questions__title">¿Por qué es importante la ciberseguridad en tu empresa?
                             <span class="questions__arrow">
-                                <img src="./images/arrow.svg" class="questions__img">
+                                <img src="images/arrow.svg" class="questions__img">
                             </span>
                         </h3>
 
@@ -249,7 +249,7 @@
                     <div class="questions__answer">
                         <h3 class="questions__title">¿Qué aprenderas en nuestras capacitaciones?
                             <span class="questions__arrow">
-                                <img src="./images/arrow.svg" class="questions__img">
+                                <img src="images/arrow.svg" class="questions__img">
                             </span>
                         </h3>
 
@@ -268,7 +268,7 @@
                     <div class="questions__answer">
                         <h3 class="questions__title">En donde nos ubicamos?
                             <span class="questions__arrow">
-                                <img src="./images/arrow.svg" class="questions__img">
+                                <img src="images/arrow.svg" class="questions__img">
                             </span>
                         </h3>
 
@@ -312,18 +312,18 @@
 
         <section class="footer__copy container">
             <div class="footer__social">
-                <a href="#" class="footer__icons"><img src="./images/facebook.svg" class="footer__img"></a>
-                <a href="#" class="footer__icons"><img src="./images/twitter.svg" class="footer__img"></a>
-                <a href="#" class="footer__icons"><img src="./images/youtube.svg" class="footer__img"></a>
+                <a href="#" class="footer__icons"><img src="images/facebook.svg" class="footer__img"></a>
+                <a href="#" class="footer__icons"><img src="images/twitter.svg" class="footer__img"></a>
+                <a href="#" class="footer__icons"><img src="images/youtube.svg" class="footer__img"></a>
             </div>
 
             
         </section>
     </footer>
 
-    <script src="./js/slider.js"></script>
-    <script src="./js/questions.js"></script>
-    <script src="./js/menu.js"></script>
+    <script src="js/slider.js"></script>
+    <script src="js/questions.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 
 </html>
