Se añadieron las imagenes de los integrantes y se corrigio el logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Securitec</title>
-    <link rel="shortcut icon" href="images/favicon_sec.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/estilos.css">
 
@@ -108,7 +108,7 @@
                 </div>
 
                 <figure class="knowledge__picture">
-                    <img src="images/favicon_sec.png" class="knowledge__img">
+                    <img src="images/Logo.png" class="knowledge__img">
                 </figure>
             </div>
         </section>
@@ -168,53 +168,53 @@
 
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Jordan Alexander, <span class="testimony__course">Especialista en seguridad en la nube.</span></h2>
+                        <h2 class="subtitle">Mi nombre es Ana Karen, <span class="testimony__course">Especialista en seguridad en la nube.</span></h2>
                         <p class="testimony__review"> Especialista en seguridad en la nube con más de 5 años de experiencia en proteger entornos cloud. 
                             Experto en arquitecturas seguras, compliance, y gestión de riesgos en plataformas como AWS y Azure, Juan ha ayudado a numerosas 
                             empresas a implementar estrategias seguras que garantizan la protección de sus datos y operaciones en la nube.</p>
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="images/face.jpg" class="testimony__img">
+                        <img src="images/Integrante1.jpg" class="testimony__img">
                     </figure>
                 </section>
 
                 <section class="testimony__body" data-id="2">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Alejandra Perez, <span class="testimony__course">Especialista en Auditorías y pruebas de penetración.</span></h2>
+                        <h2 class="subtitle">Mi nombre es German Diaz, <span class="testimony__course">Especialista en Auditorías y pruebas de penetración.</span></h2>
                         <p class="testimony__review">Experta en identificar vulnerabilidades y evaluar la seguridad de sistemas mediante ataques simulados, ha 
                             trabajado con diversas empresas para fortalecer sus defensas y garantizar el cumplimiento de estándares de ciberseguridad. Su enfoque 
                             detallado asegura la detección temprana de amenazas.</p>
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="images/face2.jpg" class="testimony__img">
+                        <img src="images/Integrante2_1.jpg" class="testimony__img">
                     </figure>
                 </section>
 
                 <section class="testimony__body" data-id="3">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Karen Arteaga, <span class="testimony__course">Especialista en Consultoría en Ciberseguridad.</span></h2>
+                        <h2 class="subtitle">Mi nombre es Juan Pablo, <span class="testimony__course">Especialista en Consultoría en Ciberseguridad.</span></h2>
                         <p class="testimony__review">Se dedica a diseñar estrategias de protección personalizadas, ayudando a las empresas a gestionar riesgos, 
                             cumplir con normativas y fortalecer su infraestructura digital. Su enfoque proactivo y asesoramiento experto garantizan una seguridad 
                             integral frente a las crecientes amenazas cibernéticas.</p>
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="images/face3.jpg" class="testimony__img">
+                        <img src="images/Integrante3.jpg" class="testimony__img">
                     </figure>
                 </section>
 
                 <section class="testimony__body" data-id="4">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Mi nombre es Kevin Ramirez, <span class="testimony__course">Especialista en Capacitación en Ciberseguridad.</span></h2>
+                        <h2 class="subtitle">Mi nombre es Daniela Valadez, <span class="testimony__course">Especialista en Capacitación en Ciberseguridad.</span></h2>
                         <p class="testimony__review">Se enfoca en desarrollar programas de formación personalizados para empresas, capacitando a equipos sobre buenas 
                             prácticas de seguridad, prevención de amenazas y cumplimiento de normativas. Su enfoque práctico y dinámico asegura que los colaboradores 
                             adquieran habilidades esenciales para proteger su entorno digital.</p>
                     </div>
 
                     <figure class="testimony__picture">
-                        <img src="images/face4.jpg" class="testimony__img">
+                        <img src="images/Integrante4_1.jpg" class="testimony__img">
                     </figure>
                 </section>
 
