Se añadieron las redes sociales de la empresa.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Securitec</title>
+    <title>Datatek</title>
     <link rel="shortcut icon" href="images/Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/estilos.css">
@@ -37,7 +37,7 @@
     <header class="hero">
         <nav class="nav container">
             <div class="nav__logo">
-                <h2 class="nav__title">Securitec.</h2>
+                <h2 class="nav__title">Datatek.</h2>
             </div>
 
             <ul class="nav__link nav__link--menu">
@@ -99,7 +99,7 @@
             <div class="knowledge__container container">
                 <div class="knowledege__texts">
                     <h2 class="subtitle">Sobre nosotros.</h2>
-                    <p class="knowledge__paragraph">En Securitec, nos especializamos en ofrecer soluciones avanzadas de ciberseguridad para proteger
+                    <p class="knowledge__paragraph">En Datatek, nos especializamos en ofrecer soluciones avanzadas de ciberseguridad para proteger
                          los activos digitales de tu empresa. Con un equipo de expertos altamente capacitados y tecnología de vanguardia, ayudamos a
                           prevenir, detectar y mitigar amenazas cibernéticas que pueden comprometer la seguridad de tu información. Nuestro enfoque 
                           integral abarca desde auditorías de seguridad y pruebas de penetración hasta la implementación de medidas de protección en la nube. 
@@ -108,7 +108,7 @@
                 </div>
 
                 <figure class="knowledge__picture">
-                    <img src="images/Logo.png" class="knowledge__img">
+                    <img src="images/Logo-contraste.png" class="knowledge__img">
                 </figure>
             </div>
         </section>
@@ -283,7 +283,7 @@
     <footer class="footer">
         <section class="footer__container container">
             <nav class="nav nav--footer">
-                <h2 class="footer__title">Securitec.</h2>
+                <h2 class="footer__title">Datatek.</h2>
 
                 <ul class="nav__link nav__link--footer">
                     <li class="nav__items">
@@ -312,9 +312,9 @@
 
         <section class="footer__copy container">
             <div class="footer__social">
-                <a href="#" class="footer__icons"><img src="images/facebook.svg" class="footer__img"></a>
-                <a href="#" class="footer__icons"><img src="images/twitter.svg" class="footer__img"></a>
-                <a href="#" class="footer__icons"><img src="images/youtube.svg" class="footer__img"></a>
+                <a href="https://www.facebook.com/profile.php?id=61566336115578" class="footer__icons"><img src="images/facebook.svg" class="footer__img"></a>
+                <a href="https://x.com/SecuritecITC" class="footer__icons"><img src="images/twitter.svg" class="footer__img"></a>
+                <a href="https://www.youtube.com/channel/UCG0U39s68QOY1UhWXzObInA" class="footer__icons"><img src="images/youtube.svg" class="footer__img"></a>
             </div>
 
             
